Source/WebCore/html/HTMLMediaElement.cpp
@@ -4477,8 +4477,8 @@ void HTMLMediaElement::updatePlayState()
 
         if (hasMediaControls())
             mediaControls()->playbackStarted();
-        if (document().page())
-            m_activityToken = document().page()->pageThrottler().mediaActivityToken();
+        if (document().page() && document().page()->pageThrottler())
+            m_activityToken = document().page()->pageThrottler()->mediaActivityToken();
 
         startPlaybackProgressTimer();
         m_playing = true;
