Source/WebKit2/WebProcess/Plugins/Netscape/NPRuntimeObjectMap.cpp
@@ -193,8 +193,8 @@ bool NPRuntimeObjectMap::evaluate(NPObject* npObject, const String& scriptString
 #if PLATFORM(COCOA)
     if (m_pluginView && !m_pluginView->isBeingDestroyed()) {
         if (Page* page = m_pluginView->frame()->page()) {
-            if (m_pluginView->audioHardwareActivity() != WebCore::AudioHardwareActivityType::IsInactive)
-                page->pageThrottler().pluginDidEvaluateWhileAudioIsPlaying();
+            if (m_pluginView->audioHardwareActivity() != WebCore::AudioHardwareActivityType::IsInactive && page->pageThrottler())
+                page->pageThrottler()->pluginDidEvaluateWhileAudioIsPlaying();
         }
     }
 #endif
