Source/WebKit2/WebProcess/WebPage/WebPage.cpp
@@ -395,6 +395,7 @@ WebPage::WebPage(uint64_t pageID, const WebPageCreationParameters& parameters)
     m_page->setViewState(m_viewState);
     if (!isVisible())
         m_page->setIsPrerender();
+    m_page->createPageThrottler();
 
     updateIsInWindow(true);
 
@@ -1746,7 +1747,8 @@ static bool handleMouseEvent(const WebMouseEvent& mouseEvent, WebPage* page, boo
 
 void WebPage::mouseEvent(const WebMouseEvent& mouseEvent)
 {
-    m_page->pageThrottler().didReceiveUserInput();
+    ASSERT(m_page->pageThrottler());
+    m_page->pageThrottler()->didReceiveUserInput();
 
 #if ENABLE(CONTEXT_MENUS)
     // Don't try to handle any pending mouse events if a context menu is showing.
@@ -1814,7 +1816,8 @@ static bool handleWheelEvent(const WebWheelEvent& wheelEvent, Page* page)
 
 void WebPage::wheelEvent(const WebWheelEvent& wheelEvent)
 {
-    m_page->pageThrottler().didReceiveUserInput();
+    ASSERT(m_page->pageThrottler());
+    m_page->pageThrottler()->didReceiveUserInput();
 
     bool handled = false;
 
@@ -1845,7 +1848,8 @@ static bool handleKeyEvent(const WebKeyboardEvent& keyboardEvent, Page* page)
 
 void WebPage::keyEvent(const WebKeyboardEvent& keyboardEvent)
 {
-    m_page->pageThrottler().didReceiveUserInput();
+    ASSERT(m_page->pageThrottler());
+    m_page->pageThrottler()->didReceiveUserInput();
 
     bool handled = false;
 
